[tool.poetry]
name = "mt103"
version = "1.1.1"
readme = "README.rst"
homepage = "https://github.com/danielquinn/mt103"
repository = "https://github.com/danielquinn/mt103"
description = "Parse MT103 messages from the Swift payments network"
authors = ["Daniel Quinn <code@danielquinn.org>"]
license = "GPL-3.0-or-later"
classifiers = [
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
        "Topic :: Office/Business :: Financial"
]


[tool.poetry.dependencies]
python = "^3.6"


[tool.poetry.dev-dependencies]
isort = "^5.6.4"
black = "^20.8b1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.coverage.run]
branch = true
omit = ["tests.py"]


[tool.coverage.report]
ignore_errors = true
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError"
]


[tool.isort]
atomic = true
not_skip = "__init__.py"
multi_line_output = 3
case_sensitive = true
lines_after_imports = 2
lines_between_types = 1
combine_as_imports = true
default_section = "THIRDPARTY"
line_length = 79
include_trailing_comma = true
sections=[
  "FUTURE",
  "STDLIB",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER"
]


[tool.black]
line-length = 79
target-version = ['py36']
include = '\.pyi?$'
exclude = '/(\.eggs|\.git|_build|build|dist)/'